--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: layout
+---
+
+{% include employment.html %}
+
+{% include education.html %}
+
+{% include skills.html %}
+
+{% include initiatives.html %}
+
+{% include interests.html %}
