--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: layout
 ---
+{% include education.html %}
 
 {% include employment.html %}
 
-{% include education.html %}
+{% include profession.html %}
 
 {% include skills.html %}
-
-{% include initiatives.html %}
 
 {% include interests.html %}
